# axum-uuid-json

./: .dockerignore  Cargo.toml  Dockerfile  Readme.md  justfile
src/: main.rs
src/routes/: api.rs  health_check.rs  mod.rs
