[package]
name = "axum_uuid_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
hyper = {version = "0.14.26", features = ["full"]}
serde = {version = "1.0.160", features = ["derive"]}
tokio = {version = "1.28.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
uuid = {version = "1.3.2", features = ["v4", "serde"]}
